# ChangeLog for dev-lang/parrot
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/ChangeLog,v 1.29 2010/02/28 20:42:07 lu_zero Exp $

*parrot-2.1.1 (28 Feb 2010)

  28 Feb 2010; Luca Barbato <lu_zero@gentoo.org> +parrot-2.1.1.ebuild:
  New version

*parrot-1.9.0 (08 Jan 2010)

  08 Jan 2010; Patrick Lauer <patrick@gentoo.org> +parrot-1.9.0.ebuild:
  Bump to 1.9.0. Tests finally pass.

*parrot-1.7.0 (02 Nov 2009)

  02 Nov 2009; Patrick Lauer <patrick@gentoo.org> +parrot-1.7.0.ebuild:
  Bump to 1.7.0

  16 Aug 2009; Torsten Veller <tove@gentoo.org>
  -files/parrot-0.4.5-pod-test.patch, -files/mod_parrot.patch,
  -files/parrot-config.patch, -files/parrot-hints.patch,
  -files/root.in.patch:
  Remove unused patches

  25 Jul 2009; Patrick Lauer <patrick@gentoo.org> -parrot-0.4.0.ebuild,
  -parrot-0.4.3.ebuild, -parrot-0.4.5.ebuild, -parrot-0.4.6.ebuild,
  -parrot-0.6.1.ebuild:
  Removing old

*parrot-1.4.0 (25 Jul 2009)

  25 Jul 2009; Patrick Lauer <patrick@gentoo.org> +parrot-1.4.0.ebuild:
  Bump to 1.4.0, fixes #278626

  27 Jun 2009; Patrick Lauer <patrick@gentoo.org> parrot-1.3.0.ebuild:
  Fixing license, thanks to tove for noticing

  27 Jun 2009; Patrick Lauer <patrick@gentoo.org> parrot-1.3.0.ebuild:
  Adding accidentally dropped arches x86 and sparc back

*parrot-1.3.0 (27 Jun 2009)

  27 Jun 2009; Patrick Lauer <patrick@gentoo.org> +parrot-1.3.0.ebuild:
  Bump to 1.3.0. Closes #247125

*parrot-0.6.1 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +parrot-0.6.1.ebuild:
  Version bump

  29 Jan 2008; Fabian Groffen <grobian@gentoo.org> parrot-0.4.0.ebuild,
  parrot-0.4.3.ebuild, parrot-0.4.5.ebuild, parrot-0.4.6.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*parrot-0.4.6 (18 Oct 2006)

  18 Oct 2006; Yuval Yaari <yuval@gentoo.org> +parrot-0.4.6.ebuild:
  Version bump, mainly to satisfy dev-lang/pugs-6.2.13

  13 Aug 2006; <yuval@gentoo.org> parrot-0.4.5.ebuild: