@@ -2,7 +2,9 @@ AUX parrot-1.9.0-fix-darwin-compile-and-link.patch 1479 RMD160 8c894b0d4017a4731
 AUX parrot-2.1.1-fix-darwin-compile-and-link.patch 1482 RMD160 8cc54c432bbdb93db90627f0a700b1112f0e0907 SHA1 6dc4ecd9866f2160ec81ac6e50fb92f09911c6cb SHA256 2f8f2aba31f1a09febf86cc0613361745d54f3b3233377e21f7666b88938dd5c
 DIST parrot-1.9.0.tar.gz 4065631 RMD160 1d63025b29a5c13a357cd6855cb89fa0489c4b81 SHA1 5f9fe29bb317d3b3f6e8caaf79fb27d5e8627ea5 SHA256 63259d32b114356178072e0595c2cb51de8587c412ac7d18fc76c36f66108246
 DIST parrot-2.1.1.tar.gz 4051736 RMD160 8067c66207d691ce519df04e6fbc0c11b017a0eb SHA1 f94309d31f34674dc156aad724bbc2f50d57a23d SHA256 3a15f9d7064ab730d8ad96d81dd889c6106352aee7d99ff4f42a30db1d4b6b89
+DIST parrot-2.3.0.tar.bz2 3324254 RMD160 0a2c122c545d36cc5b4320dd7e4ce1402d60aa34 SHA1 667a37957e54a9bcabdada4f9a91c7f9ae362782 SHA256 23109f5aa5f0c1519492b45ff26f22c713de7a9db120f367b9c4d41dd7ae38db
 EBUILD parrot-1.9.0.ebuild 1767 RMD160 5e5daff7c69261cea6d362eded884361b6f67435 SHA1 04c7f09efb35cd07e8c56e3c5d7c0ced4e81ee4b SHA256 b60018f39f5390502daf7698d628ce5abce7b7b4e287fe18ccbf36c90c4330bc
 EBUILD parrot-2.1.1.ebuild 1859 RMD160 deb670240bcc46f84d65df96815c0178ed3e40a3 SHA1 3bde06d659b43cc738c45f2c2c9f159d5b086071 SHA256 d17728d1e3abcb342712a8e49d5217846d4a537f6fac32d831ebbd29e374d07a
-MISC ChangeLog 4392 RMD160 58043b58c525a65e075d557c9f5274d5f9f34982 SHA1 8bafdd4611ed7ba529d9d71f60f73005a524c43f SHA256 49114e437e632410bd9b43b94d89862e2ae839ec86eeca50cf95d398e1424f4d
+EBUILD parrot-2.3.0.ebuild 2303 RMD160 403355171aec3bfe847443865577512e36f41af4 SHA1 0a3808d299145567d642af7c3ebdf6b477f1d8c2 SHA256 801cd2acb5522edf39b5b688c9da7d59ff8cd593dbc4e2bca3f68a5c23655a2a
+MISC ChangeLog 4546 RMD160 58efef7751ce917e5a5b073b0d96383d0789e247 SHA1 97bc81d86da72c779f6415f5c8c7631df0ef1739 SHA256 77644bbef689e8b1c3dcac976bfc63641a10ab63f7bf6bfbcfdc26a573f753a9
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
