@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/parrot
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/ChangeLog,v 1.29 2010/02/28 20:42:07 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/ChangeLog,v 1.30 2010/04/25 07:41:33 tove Exp $
+
+*parrot-2.3.0 (25 Apr 2010)
+
+  25 Apr 2010; Torsten Veller <tove@gentoo.org> +parrot-2.3.0.ebuild:
+  Version bump. Thanks to Alexandre Rostovtsev (#307203)
 
 *parrot-2.1.1 (28 Feb 2010)
 
